--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "137.1"
+       "172.1"
       ]
      },
      "execution_count": 1,
@@ -32,13 +32,13 @@
     "Level = 1  # College\n",
     "\n",
     "# Calculate the salary for a college graduate\n",
-    "salary_college = beta_0 + beta_1 * GPA + beta_2 * IQ + beta_3 * Level + beta_4 * (GPA * IQ) + beta_5 * (GPA * Level)\n",
+    "salary_college = beta_0 + 35 + beta_1 * GPA + beta_2 * IQ + beta_3 * Level + beta_4 * (GPA * IQ) + beta_5 * (GPA * Level)\n",
     "salary_college\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "38d4e7b1-0501-4d96-9d3c-1f381b8ca9bf",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "dedce73b-a2b4-4417-8e43-ce048d64622f",
    "metadata": {},
    "outputs": [
@@ -73,10 +73,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   41.52</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 16 Oct 2024</td> <th>  Prob (F-statistic):</th> <td>2.39e-23</td>\n",
+       "  <th>Date:</th>             <td>Thu, 24 Oct 2024</td> <th>  Prob (F-statistic):</th> <td>2.39e-23</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:55:31</td>     <th>  Log-Likelihood:    </th> <td> -927.66</td>\n",
+       "  <th>Time:</th>                 <td>21:04:40</td>     <th>  Log-Likelihood:    </th> <td> -927.66</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   400</td>      <th>  AIC:               </th> <td>   1863.</td>\n",
@@ -130,8 +130,8 @@
        "\\textbf{Dep. Variable:}    &      Sales       & \\textbf{  R-squared:         } &     0.239   \\\\\n",
        "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.234   \\\\\n",
        "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     41.52   \\\\\n",
-       "\\textbf{Date:}             & Wed, 16 Oct 2024 & \\textbf{  Prob (F-statistic):} &  2.39e-23   \\\\\n",
-       "\\textbf{Time:}             &     20:55:31     & \\textbf{  Log-Likelihood:    } &   -927.66   \\\\\n",
+       "\\textbf{Date:}             & Thu, 24 Oct 2024 & \\textbf{  Prob (F-statistic):} &  2.39e-23   \\\\\n",
+       "\\textbf{Time:}             &     21:04:40     & \\textbf{  Log-Likelihood:    } &   -927.66   \\\\\n",
        "\\textbf{No. Observations:} &         400      & \\textbf{  AIC:               } &     1863.   \\\\\n",
        "\\textbf{Df Residuals:}     &         396      & \\textbf{  BIC:               } &     1879.   \\\\\n",
        "\\textbf{Df Model:}         &           3      & \\textbf{                     } &             \\\\\n",
@@ -168,8 +168,8 @@
        "Dep. Variable:                  Sales   R-squared:                       0.239\n",
        "Model:                            OLS   Adj. R-squared:                  0.234\n",
        "Method:                 Least Squares   F-statistic:                     41.52\n",
-       "Date:                Wed, 16 Oct 2024   Prob (F-statistic):           2.39e-23\n",
-       "Time:                        20:55:31   Log-Likelihood:                -927.66\n",
+       "Date:                Thu, 24 Oct 2024   Prob (F-statistic):           2.39e-23\n",
+       "Time:                        21:04:40   Log-Likelihood:                -927.66\n",
        "No. Observations:                 400   AIC:                             1863.\n",
        "Df Residuals:                     396   BIC:                             1879.\n",
        "Df Model:                           3                                         \n",
@@ -193,7 +193,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "e9c8638e-09b3-42ac-9669-6424da3f1107",
    "metadata": {},
    "outputs": [
@@ -229,10 +229,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   62.43</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 16 Oct 2024</td> <th>  Prob (F-statistic):</th> <td>2.66e-24</td>\n",
+       "  <th>Date:</th>             <td>Thu, 24 Oct 2024</td> <th>  Prob (F-statistic):</th> <td>2.66e-24</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:55:43</td>     <th>  Log-Likelihood:    </th> <td> -927.66</td>\n",
+       "  <th>Time:</th>                 <td>21:04:40</td>     <th>  Log-Likelihood:    </th> <td> -927.66</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   400</td>      <th>  AIC:               </th> <td>   1861.</td>\n",
@@ -283,8 +283,8 @@
        "\\textbf{Dep. Variable:}    &      Sales       & \\textbf{  R-squared:         } &     0.239   \\\\\n",
        "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.235   \\\\\n",
        "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     62.43   \\\\\n",
-       "\\textbf{Date:}             & Wed, 16 Oct 2024 & \\textbf{  Prob (F-statistic):} &  2.66e-24   \\\\\n",
-       "\\textbf{Time:}             &     20:55:43     & \\textbf{  Log-Likelihood:    } &   -927.66   \\\\\n",
+       "\\textbf{Date:}             & Thu, 24 Oct 2024 & \\textbf{  Prob (F-statistic):} &  2.66e-24   \\\\\n",
+       "\\textbf{Time:}             &     21:04:40     & \\textbf{  Log-Likelihood:    } &   -927.66   \\\\\n",
        "\\textbf{No. Observations:} &         400      & \\textbf{  AIC:               } &     1861.   \\\\\n",
        "\\textbf{Df Residuals:}     &         397      & \\textbf{  BIC:               } &     1873.   \\\\\n",
        "\\textbf{Df Model:}         &           2      & \\textbf{                     } &             \\\\\n",
@@ -320,8 +320,8 @@
        "Dep. Variable:                  Sales   R-squared:                       0.239\n",
        "Model:                            OLS   Adj. R-squared:                  0.235\n",
        "Method:                 Least Squares   F-statistic:                     62.43\n",
-       "Date:                Wed, 16 Oct 2024   Prob (F-statistic):           2.66e-24\n",
-       "Time:                        20:55:43   Log-Likelihood:                -927.66\n",
+       "Date:                Thu, 24 Oct 2024   Prob (F-statistic):           2.66e-24\n",
+       "Time:                        21:04:40   Log-Likelihood:                -927.66\n",
        "No. Observations:                 400   AIC:                             1861.\n",
        "Df Residuals:                     397   BIC:                             1873.\n",
        "Df Model:                           2                                         \n",
@@ -344,7 +344,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "f6e211b0-24c0-4435-b90d-fc4358634b3a",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "Price      -0.06476  -0.044195"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "f33b64ef-99fe-4069-9236-89f04e51a5af",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        " 395         14   Yes  Yes  )"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,8 +550,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "aaa7f4d3-25ec-434d-93b8-ac678b08090a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE for Linear Regression: 0.16677429076547393\n",
+      "RMSLE for Random Forest Regressor: 0.15600040102121365\n",
+      "Submission file created successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_log_error\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load the datasets\n",
+    "train_df = pd.read_csv('C:/Users/arman/Downloads/playground-series-s4e4/train.csv')\n",
+    "test_df = pd.read_csv('C:/Users/arman/Downloads/playground-series-s4e4/test.csv')\n",
+    "\n",
+    "# Separate features and target from the training data\n",
+    "X = train_df.drop(columns=['id', 'Rings'])\n",
+    "y = train_df['Rings']\n",
+    "test_ids = test_df['id']\n",
+    "X_test = test_df.drop(columns=['id'])\n",
+    "\n",
+    "# Preprocessing pipeline\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', StandardScaler(), ['Length', 'Diameter', 'Height', 'Whole weight', \n",
+    "                                   'Whole weight.1', 'Whole weight.2', 'Shell weight']),\n",
+    "        ('cat', OneHotEncoder(drop='first'), ['Sex'])\n",
+    "    ])\n",
+    "\n",
+    "# Define two models\n",
+    "linear_model = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "                               ('regressor', LinearRegression())])\n",
+    "\n",
+    "rf_model = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "                           ('regressor', RandomForestRegressor(n_estimators=100, random_state=42))])\n",
+    "\n",
+    "# Split the training data for evaluation\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train and predict with Linear Regression\n",
+    "linear_model.fit(X_train, y_train)\n",
+    "y_pred_linear = linear_model.predict(X_valid)\n",
+    "rmsle_linear = np.sqrt(mean_squared_log_error(y_valid, np.clip(y_pred_linear, a_min=0, a_max=None)))\n",
+    "\n",
+    "# Train and predict with Random Forest Regressor\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "y_pred_rf = rf_model.predict(X_valid)\n",
+    "rmsle_rf = np.sqrt(mean_squared_log_error(y_valid, np.clip(y_pred_rf, a_min=0, a_max=None)))\n",
+    "\n",
+    "print(\"RMSLE for Linear Regression:\", rmsle_linear)\n",
+    "print(\"RMSLE for Random Forest Regressor:\", rmsle_rf)\n",
+    "\n",
+    "# Predict on the test data with the Random Forest model\n",
+    "y_test_pred_rf = rf_model.predict(X_test)\n",
+    "\n",
+    "# Prepare the submission file\n",
+    "submission_df = pd.DataFrame({\n",
+    "    'id': test_ids,\n",
+    "    'Rings': np.clip(y_test_pred_rf, a_min=0, a_max=None)  # Ensure no negative predictions\n",
+    "})\n",
+    "submission_df.to_csv('C:/Users/arman/Downloads/playground-series-s4e4/abalone_submission_rf.csv', index=False)\n",
+    "\n",
+    "print(\"Submission file created successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e402195f-4266-4935-b8d5-c36eea784806",
    "metadata": {},
    "outputs": [],
    "source": []
