--- a/Assignment5.ipynb
+++ b/Assignment5.ipynb
@@ -257,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4d16bb38-aebf-42af-a52a-0282a1ba4d3b",
+   "execution_count": 7,
+   "id": "7d947263-a791-44b2-a3c8-7986ebcf2bf5",
    "metadata": {},
    "outputs": [
     {
@@ -274,16 +274,18 @@
       "3  20761  Obesity_Type_III  Obesity_Type_III  Obesity_Type_III   \n",
       "4  20762  Obesity_Type_III  Obesity_Type_III  Obesity_Type_III   \n",
       "\n",
-      "                SVM  \n",
-      "0  Obesity_Type_III  \n",
-      "1  Obesity_Type_III  \n",
-      "2  Obesity_Type_III  \n",
-      "3  Obesity_Type_III  \n",
-      "4  Obesity_Type_III  \n",
+      "                SVM            Ridge            Lasso  \n",
+      "0  Obesity_Type_III  Obesity_Type_II  Obesity_Type_II  \n",
+      "1  Obesity_Type_III  Obesity_Type_II  Obesity_Type_II  \n",
+      "2  Obesity_Type_III  Obesity_Type_II  Obesity_Type_II  \n",
+      "3  Obesity_Type_III  Obesity_Type_II  Obesity_Type_II  \n",
+      "4  Obesity_Type_III  Obesity_Type_II  Obesity_Type_II  \n",
       "lda_submission.csv created successfully!\n",
       "qda_submission.csv created successfully!\n",
       "naive_bayes_submission.csv created successfully!\n",
-      "svm_submission.csv created successfully!\n"
+      "svm_submission.csv created successfully!\n",
+      "ridge_submission.csv created successfully!\n",
+      "lasso_submission.csv created successfully!\n"
      ]
     }
    ],
@@ -295,6 +297,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import Ridge, Lasso\n",
     "\n",
     "# Load the datasets\n",
     "train_data = pd.read_csv('C:/Users/arman/Downloads/playground-series-s4e2/train.csv')\n",
@@ -348,18 +351,24 @@
     "qda = QuadraticDiscriminantAnalysis()\n",
     "naive_bayes = GaussianNB()\n",
     "svm = SVC(probability=True, random_state=42)\n",
+    "ridge = Ridge(alpha=1.0)  # Adjust alpha for tuning\n",
+    "lasso = Lasso(alpha=0.1)  # Adjust alpha for tuning\n",
     "\n",
     "# Train each model on the transformed data\n",
     "lda.fit(X_train_pca, y_train)\n",
     "qda.fit(X_train_pca, y_train)\n",
     "naive_bayes.fit(X_train_pca, y_train)\n",
     "svm.fit(X_train_pca, y_train)\n",
+    "ridge.fit(X_train_pca, y_train)\n",
+    "lasso.fit(X_train_pca, y_train)\n",
     "\n",
     "# Generate predictions on the PCA-transformed test set\n",
     "lda_pred = lda.predict(X_test_pca)\n",
     "qda_pred = qda.predict(X_test_pca)\n",
     "naive_bayes_pred = naive_bayes.predict(X_test_pca)\n",
     "svm_pred = svm.predict(X_test_pca)\n",
+    "ridge_pred = ridge.predict(X_test_pca).round().astype(int)  # Round predictions for classification\n",
+    "lasso_pred = lasso.predict(X_test_pca).round().astype(int)\n",
     "\n",
     "# Convert predictions to a DataFrame\n",
     "predictions_df = pd.DataFrame({\n",
@@ -367,7 +376,9 @@
     "    'LDA': label_encoder.inverse_transform(lda_pred),\n",
     "    'QDA': label_encoder.inverse_transform(qda_pred),\n",
     "    'Naive_Bayes': label_encoder.inverse_transform(naive_bayes_pred),\n",
-    "    'SVM': label_encoder.inverse_transform(svm_pred)\n",
+    "    'SVM': label_encoder.inverse_transform(svm_pred),\n",
+    "    'Ridge': label_encoder.inverse_transform(ridge_pred),\n",
+    "    'Lasso': label_encoder.inverse_transform(lasso_pred)\n",
     "})\n",
     "\n",
     "# Display the first few rows of predictions\n",
@@ -379,6 +390,8 @@
     "    'qda_submission.csv': predictions_df[['id', 'QDA']].rename(columns={'QDA': 'NObeyesdad'}),\n",
     "    'naive_bayes_submission.csv': predictions_df[['id', 'Naive_Bayes']].rename(columns={'Naive_Bayes': 'NObeyesdad'}),\n",
     "    'svm_submission.csv': predictions_df[['id', 'SVM']].rename(columns={'SVM': 'NObeyesdad'}),\n",
+    "    'ridge_submission.csv': predictions_df[['id', 'Ridge']].rename(columns={'Ridge': 'NObeyesdad'}),\n",
+    "    'lasso_submission.csv': predictions_df[['id', 'Lasso']].rename(columns={'Lasso': 'NObeyesdad'})\n",
     "}\n",
     "\n",
     "# Save each submission file\n",
@@ -386,6 +399,14 @@
     "    df.to_csv(f'C:/Users/arman/Downloads/{filename}', index=False)\n",
     "    print(f\"{filename} created successfully!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b131796-c52b-4425-b4db-558bdf9c4020",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
